Fix image path for Felixbrownie

--- a/recipes/Felixbrownie.html
+++ b/recipes/Felixbrownie.html
@@ -9,7 +9,7 @@
 
     <h1>Felix Brownies</h1>
     
-    <img src="../images/felixbrownie.jpg" alt="Felix eating a delicious, moist looking homemade brownie">
+    <img src="../images/Felixbrownie.jpg" alt="Felix eating a delicious, moist looking homemade brownie">
 
     <h2>This is the personal brownie recipe of K pop idol, Felix, of Stray Kids!
         Said to be the most delicious brownies of the world, Felix often gifts these scrumptious treats to friends, family, staff, and fellow idols.
